# nineboard-alphabeta

./: README.md
NineBoard/: CMakeLists.txt  main.cpp
NineBoard/src/: BoardCoordinate.h  ConsoleColours.h  GameStats.h  Menu.h  NBGame.h  NineBoard.h  Player.h  TicTacToe.h
NineBoard/src/players/: AlphaBeta.h  HumanPlayer.h  MiniMax.h  MonteCarlo.h  OneLayer.h  RandomPlayer.h  TwoLayer.h
